--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "yl-third-party-instantsettlement-api-client",
   "version": "v1.0",
-  "description": "Through_this_API_you_can_can_create_Instant_Settlement_transactions_with_YouLend",
-  "license": "Unlicense",
+  "description": "Through this API you can create Instant Settlement transactions with YouLend",
+  "license": "MT",
+  "repository": "https://github.com/YouLend/yl-third-party-instantsettlement-api-client.git" ,
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
